cdm/src/main/java/ucar/nc2/jni/netcdf/netcdf.h


typedef int nc_type;
#define	NC_BYTE         1	/* signed 1 byte integer */
#define	NC_CHAR 	2	/* ISO/ASCII character */
#define	NC_SHORT 	3	/* signed 2 byte integer */
#define	NC_INT 	        4	/* signed 4 byte integer */
#define	NC_FLOAT 	5	/* single precision floating point number */
#define	NC_DOUBLE 	6	/* double precision floating point number */
#define	NC_UBYTE 	7	/* unsigned 1 byte int */
#define	NC_USHORT 	8	/* unsigned 2-byte int */
#define	NC_UINT 	9	/* unsigned 4-byte int */
#define	NC_INT64 	10	/* signed 8-byte int */
#define	NC_UINT64 	11	/* unsigned 8-byte int */
#define	NC_STRING 	12	/* string */

/* The folloing are use internally in support of user-defines
 * types. They are also the class returned by nc_inq_user_type. */
#define	NC_VLEN 	13	/* used internally for vlen types */
#define	NC_OPAQUE 	14	/* used internally for opaque types */
#define	NC_ENUM 	15	/* used internally for enum types */
#define	NC_COMPOUND 	16	/* used internally for compound types */

/*
 * Use these 'mode' flags for nc_create.
 */
#define NC_CLOBBER	0
#define NC_NOCLOBBER	0x0004	/* Don't destroy existing file on create */
#define NC_64BIT_OFFSET 0x0200  /* Use large (64-bit) file offsets */
#define NC_NETCDF4      0x1000  /* Use netCDF-4/HDF5 format */
#define NC_CLASSIC_MODEL 0x0100 /* Enforce classic model when used with NC_NETCDF4. */

/*
 * Starting with version 3.6, there are different format netCDF
 * files. 4.0 introduces the third one. These defines are only for
 * the nc_set_default_format function.
 */
#define NC_FORMAT_CLASSIC (1)
#define NC_FORMAT_64BIT   (2)
#define NC_FORMAT_NETCDF4 (3)
#define NC_FORMAT_NETCDF4_CLASSIC  (4) /* create netcdf-4 files, with NC_CLASSIC_MODEL. */

/*
 * attribute id to put/get a global attribute
 */
#define NC_GLOBAL -1

/*
 * These maximums are enforced by the interface, to facilitate writing
 * applications and utilities.  However, nothing is statically allocated to
 * these sizes internally.
 */
#define NC_MAX_DIMS	1024	 /* max dimensions per file */
#define NC_MAX_ATTRS	8192	 /* max global or per variable attributes */
#define NC_MAX_VARS	8192	 /* max variables per file */
#define NC_MAX_NAME	256	 /* max length of a name */
#define NC_MAX_VAR_DIMS	NC_MAX_DIMS /* max per variable dimensions */

# define EXTERNL extern MSC_EXTRA
MSC_EXTRA int ncerr;

EXTERNL const char *
nc_inq_libvers(void);


EXTERNL const char *
nc_strerror(int ncerr);


EXTERNL int
nc_create(const char *path, int cmode, int *ncidp);


EXTERNL int
nc_open(const char *path, int mode, int *ncidp);


/* Given a location id, return the number of groups it contains, and
 * an array of their locids. */
EXTERNL int
nc_inq_grps(int ncid, int *numgrps, int *ncids);


/* Given locid, find name of group. (Root group is named "".) */
EXTERNL int
nc_inq_grpname(int ncid, char *name);


/* Get a list of ids for all the variables in a group. */
EXTERNL int 
nc_inq_varids(int ncid, int *nvars, int *varids);


/* Find all dimids for a location. This finds all dimensions in a
 * group, or any of it's parents. */
EXTERNL int 
nc_inq_dimids(int ncid, int *ndims, int *dimids, int include_parents);


/* Find all user-defined types for a location. This finds all
 * user-defined types in a group. */
EXTERNL int 
nc_inq_typeids(int ncid, int *ntypes, int *typeids);


/* Create a group. It's ncid is returned in the new_ncid pointer. */
EXTERNL int
nc_def_grp(int parent_ncid, char *name, int *new_ncid);


/* Get the name and size of a type. */
EXTERNL int
nc_inq_type(int ncid, nc_type xtype, char *name, size_t *size);


/* Get the name, size, and number of fields in a compound type. */
EXTERNL int
nc_inq_compound(int ncid, nc_type xtype, char *name, size_t *sizep, 
		size_t *nfieldsp);


/* Given the xtype and the fieldid, get all info about it. */
EXTERNL int
nc_inq_compound_field(int ncid, nc_type xtype, int fieldid, char *name, 
		      size_t *offsetp, nc_type *field_typeidp, int *ndimsp, 
		      int *dim_sizesp);


/* Find out about a user defined type. */
EXTERNL int
nc_inq_user_type(int ncid, nc_type xtype, char *name, size_t *size, 
		 nc_type *base_nc_typep, size_t *nfieldsp, int *classp);


/* Read an attribute of any type. */
EXTERNL int
nc_get_att(int ncid, int varid, const char *name, void *ip);


/* Get information about an enum type: it's name, base type and the
 * number of members defined. */
EXTERNL int
nc_inq_enum(int ncid, nc_type xtype, char *name, nc_type *base_nc_typep, 
	    size_t *base_sizep, size_t *num_membersp);


/* Get information about an enum member: a name and value. Name size
 * will be <= NC_MAX_NAME. */
EXTERNL int
nc_inq_enum_member(int ncid, nc_type xtype, int idx, char *name, 
		   void *value);


/* Get information about an opaque type. */
EXTERNL int
nc_inq_opaque(int ncid, nc_type xtype, char *name, size_t *sizep);


/* Read entire var of any type. */
EXTERNL int
nc_get_var(int ncid, int varid,  void *ip);


/* Read slices of an array of values. */
EXTERNL int
nc_get_vars(int ncid, int varid,  const size_t *startp, 
	    const size_t *countp, const ptrdiff_t *stridep,
	    void *ip);


EXTERNL int
nc_enddef(int ncid);


EXTERNL int
nc_sync(int ncid);


EXTERNL int
nc_close(int ncid);


EXTERNL int 
nc_inq_ndims(int ncid, int *ndimsp);


EXTERNL int 
nc_inq_nvars(int ncid, int *nvarsp);


EXTERNL int 
nc_inq_natts(int ncid, int *nattsp);


/* The next function is for NetCDF-4 only */
EXTERNL int 
nc_inq_unlimdims(int ncid, int *nunlimdimsp, int *unlimdimidsp);


/* Added in 3.6.1 to return format of netCDF file. */
EXTERNL int
nc_inq_format(int ncid, int *formatp);


/* Begin _dim */

EXTERNL int
nc_def_dim(int ncid, const char *name, size_t len, int *idp);


EXTERNL int
nc_inq_dim(int ncid, int dimid, char *name, size_t *lenp);


EXTERNL int 
nc_inq_dimname(int ncid, int dimid, char *name);


EXTERNL int 
nc_inq_atttype(int ncid, int varid, const char *name, nc_type *xtypep);


EXTERNL int 
nc_inq_attlen(int ncid, int varid, const char *name, size_t *lenp);


EXTERNL int
nc_inq_attname(int ncid, int varid, int attnum, char *name);


EXTERNL int
nc_get_att_text(int ncid, int varid, const char *name, char *ip);


EXTERNL int
nc_get_att_uchar(int ncid, int varid, const char *name, unsigned char *ip);


EXTERNL int
nc_get_att_schar(int ncid, int varid, const char *name, signed char *ip);


EXTERNL int
nc_get_att_short(int ncid, int varid, const char *name, short *ip);


EXTERNL int
nc_get_att_int(int ncid, int varid, const char *name, int *ip);


EXTERNL int
nc_get_att_float(int ncid, int varid, const char *name, float *ip);


EXTERNL int
nc_get_att_double(int ncid, int varid, const char *name, double *ip);


EXTERNL int
nc_get_att_ubyte(int ncid, int varid, const char *name, 
		 unsigned char *ip);


EXTERNL int
nc_get_att_ushort(int ncid, int varid, const char *name, unsigned short *ip);


EXTERNL int
nc_get_att_uint(int ncid, int varid, const char *name, unsigned int *ip);


EXTERNL int
nc_get_att_longlong(int ncid, int varid, const char *name, long long *ip);


EXTERNL int
nc_get_att_ulonglong(int ncid, int varid, const char *name, 
		     unsigned long long *ip);


EXTERNL int
nc_get_att_string(int ncid, int varid, const char *name, char **ip);


/* End {put,get}_att */
/* Begin _var */

EXTERNL int
nc_def_var(int ncid, const char *name, nc_type xtype, int ndims, 
	   const int *dimidsp, int *varidp);


EXTERNL int
nc_inq_var(int ncid, int varid, char *name, nc_type *xtypep, 
	   int *ndimsp, int *dimidsp, int *nattsp);


EXTERNL int
nc_get_vars_text(int ncid, int varid,
	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
	char *ip);


EXTERNL int
nc_get_vars_uchar(int ncid, int varid,
	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
	unsigned char *ip);


EXTERNL int
nc_get_vars_schar(int ncid, int varid,
	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
	signed char *ip);


EXTERNL int
nc_get_vars_short(int ncid, int varid, const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep,
		  short *ip);


EXTERNL int
nc_get_vars_int(int ncid, int varid,
	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
	int *ip);


EXTERNL int
nc_get_vars_float(int ncid, int varid,
	const size_t *startp, const size_t *countp, const ptrdiff_t *stridep,
	float *ip);


EXTERNL int
nc_get_vars_double(int ncid, int varid,	const size_t *startp, 
		   const size_t *countp, const ptrdiff_t *stridep,
		   double *ip);


EXTERNL int
nc_get_vars_ushort(int ncid, int varid, const size_t *startp, 
		   const size_t *countp, const ptrdiff_t *stridep, 
		   unsigned short *ip);


EXTERNL int
nc_get_vars_uint(int ncid, int varid, const size_t *startp, 
		 const size_t *countp, const ptrdiff_t *stridep, 
		 unsigned int *ip);


EXTERNL int
nc_get_vars_longlong(int ncid, int varid, const size_t *startp, 
		  const size_t *countp, const ptrdiff_t *stridep, 
		  long long *ip);


EXTERNL int
nc_get_vars_ulonglong(int ncid, int varid, const size_t *startp, 
		   const size_t *countp, const ptrdiff_t *stridep, 
		   unsigned long long *ip);


EXTERNL int
nc_get_vars_string(int ncid, int varid, const size_t *startp, 
		   const size_t *countp, const ptrdiff_t *stridep, 
		   char **ip);


EXTERNL int
nc_get_var_text(int ncid, int varid, char *ip);


EXTERNL int
nc_get_var_schar(int ncid, int varid, signed char *ip);


EXTERNL int
nc_get_var_short(int ncid, int varid, short *ip);


EXTERNL int
nc_get_var_int(int ncid, int varid, int *ip);


EXTERNL int
nc_get_var_float(int ncid, int varid, float *ip);


EXTERNL int
nc_get_var_double(int ncid, int varid, double *ip);


EXTERNL int
nc_get_var_ubyte(int ncid, int varid, unsigned char *ip);


EXTERNL int
nc_get_var_ushort(int ncid, int varid, unsigned short *ip);


EXTERNL int
nc_get_var_longlong(int ncid, int varid, long long *ip);


EXTERNL int
nc_get_var_ulonglong(int ncid, int varid, unsigned long long *ip);


EXTERNL int
nc_get_var_string(int ncid, int varid, char **ip);


/*
 * Global error status
 */
EXTERNL int ncerr;